# methan

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md
.github/workflows/: basic_test.yml  enhanced_testing.yml  enhanced_testing_macos.yml  enhanced_testing_ubuntu.yml  enhanced_testing_windows.yml
.metals/: metals.h2.db
cmake/: ExtractVersion.cmake  GetDynamicLibName.cmake  GetStaticLibName.cmake
doc/: internal.md
src/: CMakeLists.txt
src/cmake/: FindMethan.cmake  MethanConfig.cmake.in  configuration.hpp.in
src/methan/core/: attribute.hpp  computer.cpp  computer.hpp  configuration.hpp  context.cpp  context.hpp  contextuable.hpp  dtype.cpp  dtype.hpp  except.hpp  lib.cpp  lib.hpp  net.hpp  serializable.hpp  tensor_node.cpp  tensor_node.hpp  tensor_shape.hpp  weak_tensor.cpp  weak_tensor.hpp
src/methan/core/details/: macro.hpp  platform.hpp  serializable.inl
src/methan/private/: computer.cpp  computer.hpp  private_computer.hpp  private_constant.hpp  private_context.hpp  private_formatter.hpp  private_get_last_error.hpp  private_visit_variant_helper.hpp  tensor_node_impl.hpp
src/methan/private/framework/: allocator.cpp  allocator.hpp  cpu.cpp  cpu.hpp  device.cpp  device.hpp  framework.hpp
src/methan/private/framework/computational/: graph.cpp  graph.hpp  tensor_node.cpp  tensor_node.hpp
src/methan/private/framework/memory/: allocator.cpp  allocator.hpp  dataflow.cpp  dataflow.hpp  heap.cpp  heap.hpp  memory.cpp  memory.hpp
src/methan/private/framework/operator/: operator.cpp  operator.hpp  operator_factory.cpp  operator_factory.hpp  operator_registery.cpp  operator_registery.hpp  parameter.hpp
src/methan/private/framework/tensor/: tensor.cpp  tensor.hpp  tensor_block.cpp  tensor_block.hpp
src/methan/private/framework/threading/: scheduler.cpp  scheduler.hpp  signal.cpp  signal.hpp  task.cpp  task.hpp
src/methan/private/net/: socket.cpp  socket.hpp
src/methan/private/ops/: ops_except.hpp
src/methan/private/ops/base/: addition.cpp  addition.hpp
src/methan/utility/: assertion.hpp  crc32.hpp  data_literals.hpp  data_size.cpp  data_size.hpp  endianness.hpp  enum.hpp  exception.cpp  exception.hpp  expected.hpp  foreach.hpp  math.hpp  matrix.hpp  string_identifier.hpp  uuid.hpp  varient.hpp
src/methan/utility/hash/: crc32.hpp
test/: CMakeLists.txt
test/methan/: test_assertion.cpp  test_computer.cpp  test_context.cpp  test_cpu_descriptor.cpp  test_heap.cpp  test_net.cpp  test_op_factory.cpp  test_serdes.cpp  test_signal.cpp  test_string_identifier.cpp  test_task.cpp  test_tensor.cpp  test_tensor_shape.cpp  test_trivial.cpp  test_uuid.cpp  test_varient.cpp
